--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,9 @@
+body, h1, h2, h3, h4, h5, h6, p, a {
+  margin: 0; /*обнулит настройки по умолчанию*/
+  font-size: 100%;
+  font-weight: normal;
+}
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -10,16 +16,170 @@
 }
 
 .header {
+  background-color: #f2f2f2;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
   /* выше установили ограничения для секции */
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+  background-image: url(../images/logo_place_header.svg);
+  background-repeat: no-repeat;
+}
+
+.logo_place_header {
+  position: absolute;
+  z-index: 4;
+  top: 30px;
+  left: 64px;
+}
+
+.header__title {
+  align-items: center;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  margin-left: 64px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  width: 388px;
+  line-height: 25px;
+  font-size: 18px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  z-index: 2;
+}
+
+.header__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.header__main-illustration {
+  position: absolute;
+  width: 765px;
+  height: 608px;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
+}
+
+.description {
+  width: 80%;
+  margin: 100px auto;
+}
+
+.two-columns {
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  color: #2f80ed;
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  flex-direction: column; 
+}
+
+.two-columns__main-text__paragraph {
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.two-columns__main-text__paragraph:nth-of-type(2n) {
+  margin: 30px 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+}
+
+.section-title {
+  width: 60%;
+  margin: 0 auto 20px;
+  text-align: center;
+  font-size: 60px;
+  font-weight: bold;
+  line-height: 1.15;
+}
+
+.section-title_theme_dark {
+  color: white;
+}
+
+.section-subtitle {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+  font-size: 24px;
+  line-height: 34px;
+}
+
+.section-subtitle_theme_dark {
+  color: white;
+}
+
+.digits {
+  margin-bottom: 100px;
+}
+
+.table {
+  width: 1100px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin-top: 60px;
+}
+
+.table__cell__heading {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.15;
+  margin-bottom: 20px;
+}
+
+.table__cell__text {
+  font-size: 18px;
+  line-height: 1.2;
+}
+
+.table__cell__text:last-child {
+  margin-top: 20px;
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +188,146 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.feynman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  background-color: #f2f2f2;
+  height: 790px;
+  z-index: 0;
+}
+
+.feynman__title {
+  width: 648px;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 120px;
+  font-weight: bold;
+  line-height: 1.15;
+}
+
+.feynman__illustration {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.feynman__subtitle {
+  font-size: 36px;
+  line-height: 51px;
+  margin-top: 70px;
+  text-align: center;
+}
+
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  font-size: 36px;
+  line-height: 51px;
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  padding: 90px 0;
+  overflow: hidden;
+  position: relative;
+  z-index: 0;
+}
+
+.kaufman__illustration {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+}
+
+.footer__columns {
+  width: 90%;
+  margin: 0 auto;
+  padding: 60px 0 40px;
+  color: white;
+  display: flex;
+  flex-basis: 711px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo_place_footer {
+  width: 183px;
+  height: 35px;
+  background-image: url(../images/logo_place_footer.svg);
+  background-repeat: no-repeat;
+}
+
+.footer__author {
+  font-size: 18px;
+  line-height: 25px;
+  padding: 18px 0;
+}
+
+.footer__column-heading {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.footer__links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer__column-links {
+  margin: 20px 0 16px;
+}
+
+.footer__links {
+  font-size: 18px;
+  line-height: 30px;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__links__illustration {
+  width: 16px;
+  height: 16px;
+  padding-right: 10px;
+}
+
+.footer__column__social {
+  margin: 20px 0 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.footer__social-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
