--- a/styles/style.css
+++ b/styles/style.css
@@ -157,12 +157,22 @@
 .digits {
   margin-bottom: 100px;
 }
-
+/* второй вариант
 .table {
   width: 1100px;
   margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+*/
+
+.table {
+  width: 1100px;
+  list-style: none;
+  padding-left: 0; /*убирает отступ слева, который делает маркер списка*/
+  margin: 0 auto;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
@@ -187,7 +197,7 @@
   margin: 0; /*обнулит настройки по умолчанию*/
 }
 
-/* и элемента с модификатором вида ключ-значение */
+/* элементы с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
   color: white;
