обновление файлов CSS, HTML

--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,6 +1,5 @@
 .khan__book-pic {
   max-width: 620px;
   max-height: 608px;
-  background-size: content;
-  background-position: center top;
+  background-size: contain;
 }
