--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,5 +1,6 @@
 .khan__book-pic {
-  max-width: 620px;
-  max-height: 608px;
-  background-size: contain;
+  width: 620px;
+  height: 608px;
+  object-fit: cover; /*cмещаемый контент меняет свой размер, сохраняя свои пропорции при заполнении блока*/
+  object-position: center top; /*выравнивание контента: по горизонтали - центр, по вертикали - верх*/
 }
